# math-expr-lexer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.h  gnu-linux.c  hash-table.c  hash-table.h  lex.h  main.c
include/: hash-table.h  lex.h
include/math_expr/: evaluator.h  lexer.h
src/: hash-table.c  lex.c  main.c
src/app/: main.c
src/lexer/: evaluator.c  lexer.c
